Fixed z-index bug and search width

--- a/app/assets/stylesheets/sidebar_notebook.scss
+++ b/app/assets/stylesheets/sidebar_notebook.scss
@@ -2,7 +2,6 @@
     height: 100%;
     width: 0px;
     position: fixed;
-    z-index: 1;
     top: 0;
     overflow-x: hidden;
     transition: 0.5s;
@@ -10,7 +9,7 @@
     background-color: white;
     left: 70px;
     border-right: 2px solid lightgray;
-    z-index: 5;
+    z-index: 3;
 }
 
 .notebook-side a {
